--- a/Tron/Tron.csproj
+++ b/Tron/Tron.csproj
@@ -226,5 +226,11 @@
   <ItemGroup>
     <None Include="Resources\image-1.png %281%29-1.png %281%29.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pause.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\image-1.png %282%29-1.png-1.png %281%29.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
