--- a/Tron/Tron.csproj
+++ b/Tron/Tron.csproj
@@ -36,6 +36,7 @@
     <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -47,6 +48,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Form1.cs">
@@ -312,6 +314,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\orangeLife-1.png.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\382250__alexprost__epic-strings.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="System\Windows\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
